[package]
name = "ecc"
version = "1.0.0"
authors = ["Blanclux"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
ibig = "0.3.4"
num-traits="0.2.11"
rand = "0.8"

[profile.release]
opt-level = 3
